css/site.css
---
---
/* Front matter is necessary for Jekyll */

@import "tailwindcss/base";
@import "tailwindcss/components";
@import "_includes/syntax";

/* Write your styles below this line. */

h1, h2, h3 {
  @apply font-display font-bold;
}

p {
  @apply font-body;
}

@tailwind components;

.pill {
  @apply inline-block py-1 px-4 rounded-full font-display font-semibold;
}

.btn {
  @apply font-display font-semibold py-4 px-8 inline-block rounded-lg text-lg text-center border-solid border-3 w-full transition duration-150 ease-in;
}

.btn:hover {
  @apply shadow-none;
  transform: translate(2px, 2px);
}

.quote {
  @apply w-full mb-12;
}

.quote-box {
  @apply pt-4 border-t-2 border-solid border-green-light
}

.quote-content {
  @apply mb-4;
}

.quote-content::before {
  content: open-quote;
  @apply text-green;
}

.quote-content::after {
  content: close-quote;
  @apply text-green;
}

.quote-author {
  @apply opacity-75 mb-6;
}

.cta {
  @apply text-green font-display font-semibold transition ease-in duration-150 cursor-pointer;
}

.cta:hover {
  @apply text-pink;
}

.cta-back {
  @apply font-display font-semibold transition ease-in duration-150 cursor-pointer;
}

.cta-back:hover {
  @apply text-pink;
}

.banner {
  background-image: url('/assets/img/bg-9.svg');
  background-position: left;
  background-repeat: no-repeat;
  background-size: contain;
}

.horizontal-center {
  left: 50%;
  transform: translate(-50%, 0);
}

@screen sm {
  .btn {
    @apply w-auto;
  }

  .quote {
    @apply w-1/2 px-6 text-lg;
  }
}

@screen md {
  .quote {
    @apply w-1/3;
  }

  .banner {
    background-image: url('/assets/img/bg-7.svg'), url('/assets/img/bg-8.svg');
    background-position: left, right;
    background-repeat: no-repeat;
    background-size: contain;
  }

  .vertical-center {
    top: 50%;
    transform: translate(0, -50%);
  }
}

@screen lg {
  .quote {
    @apply w-1/4 mb-20;
  }
}

/* Write your styles above this line. */

@tailwind utilities;

